test/testdata/classes/methods/class/invalid_binary_op_error.lox
class Foo {
  class bar() {}
}
Foo.bar - 1; // error: '-' operator cannot be used with types 'function' and 'number'
